--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
+        <encoding>ISO-8859-1</encoding>
           <release>15</release>
         </configuration>
       </plugin>
